--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/slider": "^4.5.5",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -43,7 +44,8 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-uuid": "^2.0.2",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
