--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
