updated logo and gradientbutton

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "cruxlog",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/cruxlogIcon.png",
+    "icon": "./assets/images/Cruxlog1.jpeg",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
